atualizando alguns detalhes

--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Inverno</title>
 </head>
 
 <body>
 
     <!-- Header -->
-    <header class="menu">
-        <div class="menu__logo">
+    <header>
+        <div class="logo">
             <figure>
-                <img src="img/logo.png" alt="">
+                <img src="img/logo.png" alt="logo">
             </figure>
             <h2>INVERNO</h2>
         </div>
-        <nav class="menu__navegacao">
+        <nav class="navegacao">
             <ul>
                 <li><a href="">ESTAÇÃO DO ANO</a></li>
                 <li><a href="">DURAÇÃO</a></li>
@@ -34,8 +35,7 @@
 
     <!--MAIN -->
     <main>
-
-        <!-- Primeira secao -->
+        <!-- Primeira sec -->
         <section class="introducao">
             <h3 class="introducao__texto">O inverno (AO 1945: Inverno) é a estação mais fria das quatro estações do ano
                 e é comum que durante esta
@@ -46,11 +46,11 @@
                 austral". A estação não ocorre nos dois hemisférios ao mesmo tempo: enquanto em um hemisfério o inverno
                 está vigente, o outro está vivenciando o verão.</h3>
             <figure>
-                <img src="img/inverno 1.png" alt="Inverno">
+                <img class="introducao__img" src="img/inverno 1.png" alt="Inverno">
             </figure>
         </section>
 
-        <!-- Segunda secao -->
+        <!-- Segunda sec -->
         <section class="inverno">
             <figure>
                 <img src="img/gramado 1.png" alt="Inverno">
@@ -59,7 +59,7 @@
             </h3>
         </section>
 
-        <!-- Ursos -->
+        <!-- Terceira sec -->
         <section class="ursos">
             <figure>
                 <img src="img/urso1.png" alt="ursos">
@@ -68,9 +68,11 @@
                 <img src="img/urso4.png" alt="ursos">
             </figure>
         </section>
+
     </main>
 
-    <footer class="rodape">
+    <!-- Footer -->
+    <footer>
         <div>
             <p>Linkedin</p>
             <p>Github</p>
